# umag-ctl

./: .gitignore  del.sh  pyproject.toml  umag-ctl.py
pkg/: commands.py  completer.py  documentation.py  lexer.py  processor.py  style.py  widgets.py
pkg/completers/: __init__.py
pkg/lexers/: __init__.py
pkg/processors/: __init__.py
pkg/styles/: __init__.py
pkg/utils/: __init__.py  console.py  decorators.py  errors.py  fn_inspect.py  jboss.py  umag.py
