[tool.poetry]
name = "umag-ctl"
version = "0.0.1"
description = ""
authors = ["vodchella <twister.kz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
